--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <div style="height:30em; width: 100%">
-    <div id="hs-app" hs ng-app="hs" ng-controller="Main" style="position: relative; width: 100%; height: 100%; padding: 0; border: 0; margin: 0;"> </div>
+    <hs id="hs-app" ng-app="hs" ng-controller="Main" style="position: relative; width: 100%; height: 100%; padding: 0; border: 0; margin: 0;"></hs>
   </div>
 
 <script>
-    window.HSL_PATH = 'https://unpkg.com/hslayers-ng@1.24.3/dist/';
+    window.HSL_PATH = 'https://unpkg.com/hslayers-ng@1.27.4/dist/';
 
     function getLRUser() {
       return (0);
@@ -22,15 +22,10 @@
 
     function styleFunction(feature, resolution) {
       return new ol.style.Style({
-        image: new ol.style.Circle({
-          fill: new ol.style.Fill({
-            color: '#32a4c9',
-          }),
-          stroke: new ol.style.Stroke({
-            color: '#FFFFFF',
-            width: 3,
-          }),
-          radius: 9,
+        image: new ol.style.Icon({
+          anchor: [0.5, 1],
+          src: 'agrihub-sk_pin1.png',
+          //scale: 0.1
         }),
       });
     }
@@ -64,7 +59,7 @@
             removable: false
           }),
           new ol.layer.Vector({
-            title: 'Členové',
+            title: 'Členovia',
             style: styleFunction,
             popUp: {
               attributes: [
@@ -85,21 +80,21 @@
             },
             source: new ol.source.Vector({
               format: new ol.format.GeoJSON(),
-              url: 'https://raw.githubusercontent.com/jmacura/agrihub-website-map/main/data/Agrihub.cz_Members.geojson'//'./data/Plan4All_Members.geojson'
+              url: 'https://raw.githubusercontent.com/jmacura/agrihub.sk-website-map/main/data/Agrihub.sk_Members.geojson'//'./data/Plan4All_Members.geojson'
             }),
             cluster: false
           })
         ],
         default_view: new ol.View({
-          center: ol.proj.fromLonLat([15.5, 50]),
-          zoom: 7.5,
+          center: ol.proj.fromLonLat([18.5, 49]),
+          zoom: 7,
           units: 'm'
         }),
         queryPoint: 'hidden'
       }
     }
 </script>
-<script src='https://unpkg.com/hslayers-ng@1.24.3/dist/hslayers-ng.main.js'></script> <!-- ./lib/hslayers-ng.main.js -->
+<script src='https://unpkg.com/hslayers-ng@1.27.4/dist/hslayers-ng.main.js'></script> <!-- ./lib/hslayers-ng.main.js -->
 
 </body>
 </html>
