💄 Smaller icon of map pins

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       return new ol.style.Style({
         image: new ol.style.Icon({
           anchor: [0.5, 1],
-          src: 'agrihub-sk_pin1.png',
+          src: 'agrihub-sk_pin1_sm.png',
           //scale: 0.1
         }),
       });
