--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               format: new ol.format.GeoJSON(),
               url: 'https://raw.githubusercontent.com/jmacura/agrihub.sk-website-map/main/data/Agrihub.sk_Members.geojson'//'./data/Plan4All_Members.geojson'
             }),
-            cluster: true
+            cluster: false
           })
         ],
         default_view: new ol.View({
